--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <title>Home</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="stylesheet" href="styles.css" />
+  <link rel="stylesheet" href="asseta/css/styles.css" />
 </head>
 <body>
   <div class="starfield" id="starfield"></div>
@@ -35,6 +35,7 @@
     </section>
   </main>
 
-  <script type="module" src="script.js"></script>
+  <script type="module" src="assets/js/script.js"></script>
 </body>
 </html>
+
