--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <title>Home</title>
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <link rel="stylesheet" href="asseta/css/styles.css" />
+  <link rel="stylesheet" href="assets/css/styles.css" />
 </head>
 <body>
   <div class="starfield" id="starfield"></div>
@@ -38,4 +38,5 @@
   <script type="module" src="assets/js/script.js"></script>
 </body>
 </html>
+
 
